added information to all the pages

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <meta charset="utf-8">
 
-
     <title>Hayden's Profile</title>
+  </head>
+
+<body>
+
 <h1>
 
    Welcome to Hayden's Profile!
@@ -20,24 +23,24 @@
 </h2>
 
 <h2>
-  IT Interest
+  <a href="IT.html">IT Interest</a>
 </h2>
 
 <h2>
-  Ideal Job
+  <a href="idealjob.html">Ideal Job</a>
+
 </h2>
 
 <h2>
-  Personal Profile
+  <a href="personalprofile.html">Personal Profile</a>
+
 </h2>
 
 <h2>
-  Project Idea
+  <a href="projectidea.html">Project Idea</a>
+
 </h2>
-  </head>
 
-
-  <body>
 
 
   </body>
