added information to all the pages

--- a/background.html
+++ b/background.html
@@ -2,16 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <link rel="stylesheet" href="styles.css">
 
 
     <title>Background Info</title>
 
-  <h1><a href=index.html>Previous</a>
-
-   </h1>
   </head>
-  <body>
+    <body>
+
+  <h1>Background</h1>
+
+  <p>I am currently 19, born on the 22nd of February. Both my parents were born in East Timor (it’s a small country located near Indonesia), meaning that they are both Timorese making me also Timorese! At home, we speak Hakka which is a chinese dialect commonly spoken by residents of East Timor. In my family of 6 (including me), I have 3 other older brothers and a mother and father. I am the youngest in my family with an age gap of 13 years between me and the third oldest brother.</p>
+
+  <p>As of now, my occupation is a cashier and customer service team member at Woolworths and have been working there for 2 years (great first job!). Now moving onto my hobbies… mainly just PC gaming and watching anime. I tend to switch back and forth between games but I mostly play League of Legends and VALORANT. When it comes to anime I don’t always watch it but I'll have random periods where I'll just binge one entire series then go back into a hiatus until I suddenly get the urge to watch.
+
+  <p>Interesting Fact: I have a little doggo named Ace. He’s 9 years old and is an English Blue Staffy!</p>
+
+  <h2>
+    <a href=index.html>Previous</a>
+
+  </h2>
+
+   <h2>
+     <a href= IT.html>Next</a>
+
+   </h2>
+
+
+
+
 
   </body>
 </html>
