--- a/index.html
+++ b/index.html
@@ -7,37 +7,60 @@
 
     <meta charset="utf-8">
 
-
     <title>Hayden's Profile</title>
-<h1>
-
-   Welcome to Hayden's Profile!
-
-</h1>
-
-<h2>
-  <a href="background.html">Background</a>
-</h2>
-
-<h2>
-  IT Interest
-</h2>
-
-<h2>
-  Ideal Job
-</h2>
-
-<h2>
-  Personal Profile
-</h2>
-
-<h2>
-  Project Idea
-</h2>
   </head>
 
+<body>
+<div class="bg-image">
+  <header>
 
-  <body>
+    <h1>
+      <div class="introtitle">
+       Welcome to Hayden's Profile!
+     </div>
+    </h1>
+
+  </header>
+
+  <main>
+
+    <h2>
+      <div class="intromain">
+      <a href="background.html">Background</a>
+      </div>
+    </h2>
+
+    <h2>
+      <div class="intromain">
+      <a href="IT.html">IT Interest</a>
+      </div>
+    </h2>
+
+    <h2>
+      <div class="intromain">
+      <a href="idealjob.html">Ideal Job</a>
+      </div>
+    </h2>
+
+    <h2>
+      <div class="intromain">
+      <a href="personalprofile.html">Personal Profile</a>
+      </div>
+    </h2>
+
+    <h2>
+      <div class="intromain">
+      <a href="projectidea.html">Project Idea</a>
+    </div>
+    </h2>
+  </div>
+  </main>
+
+  <footer>
+
+  </footer>
+
+</div>
 
 
   </body>
