added structure to pages and background

--- a/idealjob.html
+++ b/idealjob.html
@@ -6,7 +6,12 @@
     <title>Ideal Job</title>
   </head>
   <body>
+    <header>
     <h1>Ideal Job</h1>
+  </header>
+
+  <main>
+  <div class= "para">
 
     <h2>Position</h2>
 
@@ -35,8 +40,8 @@
     <h2>A plan describing how you will obtain the skills, qualifications and experience required for the position:</h2>
 
     <p>In order to obtain the skills required for the position of IT technician, I hope to complete a Bachelor of Information Technology. During this degree I will be able to acquire and improve my programming skills with languages such as python and may change my courses so that I am able to learn other programming languages such as Java and C++. In my second year, I would pick up an elective that goes into further on IT networking and the way it works. By the end of the course, I should have acquired the fundamental skills and basics of IT. To further improve my skills, I will get an internship in an IT place to experience working in the field of IT as a technician and if needed do additional degrees. </p>
-
-
+</div>
+</main>
 
     <h2>
       <a href=IT.html>Previous</a>
