--- a/personalprofile.html
+++ b/personalprofile.html
@@ -9,9 +9,11 @@
   </head>
   <body>
 
-
+  <header>
     <h1>Personal Profile</h1>
-
+  </header>
+  <main>
+    <div class="para">
     <h2>Myerrs-Briggs Test</h2>
 
     <p>Personality type: Defender (ISFJ-T)
@@ -35,6 +37,8 @@
       <h2>How do you think you should take this into account when forming a team?</h2>
 
       <p>With these qualities and attributes in mind, when forming a team I would want to form a team that includes individuals with opposing qualities rather than the same. If i’m introverted, forming a team with other individuals who are much more extraverted allows me to experience a different environment and share ideas between two different types of people rather than having a whole group of individuals who share very similar qualities leading to poor connections, no communication and possibly lack of work within a team
+      </div>
+      </main>
 
         <h2>
           <a href=idealjob.html>Previous</a>
