--- a/projectidea.html
+++ b/projectidea.html
@@ -9,8 +9,11 @@
     <title>Project Idea</title>
   </head>
   <body>
+  <header>
     <h1>Project Idea</h1>
-
+  </header>
+  <main>
+    <div class="para">
     <h2>Overview</h2>
 
     <p>This app called FoodieFinder is a mobile phone application that enables its user to be able to find all types of restaurants, small or large in popularity without the need to look anywhere else. The goal of this application is to ensure that users are able to effortlessly find every restaurant nearby that answers to their specific cravings. By using this application, users will be able to find every type of restaurant within their area sorted by the type of cuisine they offer and also effectively navigate there without constantly switching back and forth applications. It will be designed to be the most efficient restaurant finder application available. </p>
@@ -24,11 +27,12 @@
     <p>The FoodieFinder includes a restaurant map that allows users to navigate efficiently to their desired restaurant while being able to view specifically every restaurant nearby, whether it’s a small restaurant shop or a well known restaurant, they are able to see it all within the map and make their way there. This application will also include lots of restaurant varieties including cafes, dessert places and every type of restaurant nearby so that users are able to decide what they want to eat all within one application, whether it’s breakfast, lunch or dinner.
 
       To help assist them further, instead of searching restaurants through the map, each place is sorted by the type of cuisine and more filters such as ‘previously visited, displayed by nearest, restaurants closing late’ to help narrow their search even further.’ There is also a fun little randomisation feature, which will randomly select either a type of cuisine or a specific restaurant for users who are spontaneous and want to have a new experience. Alongside the restaurant information, there will be a menu option posted while also the opening and closing times of each restaurant to allow users to have all the restaurant information at hand without needing to exit the application.
-
+    <p>
       Inside the application, what makes this unique compared to other restaurant apps is that it can be viewed as a restaurant tracker allowing you to compile a list of restaurants you enjoy and rate them. This helps users keep track of places they’ve already visited and rated so if they ever do want to revisit, they are able to remember the place and refer to the rating they gave. While also keeping track, users can also add any restaurant that they are keen to visit sometime in the future and include search filters to allow them to easily sort through restaurants they have visited and want to visit. Another small feature is that users are able to save and share their list with other people that are interested.
-
+    </p>
+    <p>
       Below each restaurant's information, there is a section for reviews that will describe another user's experience at the restaurant or place and whether they would recommend it to others or not. The user will be able to rate the restaurant out of 5 stars but there will not be an overall rating for specific restaurants as ratings can often be misleading and impact an individual's decision to dine at a specific place and in some cases, it may have been a missed opportunity for them as a result of someone else’s awful experience. Experiences within a restaurant can vary with factors affecting them such </p>
-
+    </p>
     <h2>Tools and Technology</h2>
 
     <p>For this application, I will be using AWS (Amazon Web Services). To start building my application, I will be using AWS Amplify which is a development tool allowing for the creation of frontend UI, connection to AWS and the ability to host apps and web pages at ease. I will use some of the tools provided by AWS Amplify such as Amplify studio to build a full-stack app, Amplify hosting to host the app and Amplify Libraries connecting my app to AWS services. For the interface I will use Figma to design it and import it through Amplify studio.</p>
@@ -40,7 +44,8 @@
     <h2>Outcome</h2>
 
     <p>If FoodieFinder is successful, the outcome would be that people who constantly cannot decide what they want to eat will have a platform to look towards instead of aimlessly thinking. It will solve the original problem of finding new restaurants to eat at, while at the same time impact users by prompting them to eat out more as a result of the ability to navigate and find restaurants at ease. If FoodieFinder is successful, a rewards system could be potentially added in which rewards the user’s use of FoodieFinder by offering them discounts for specific restaurants prompting continued use of the application. Future plans with FoodieFinder include a way to book tables and reservations for restaurants that require bookings and possibly a way to view a transaction history for restaurants you have dined in to allow FoodieFinder to shine as the application for all your food needs. </p>
-
+  </div>
+</main>
     <h2>
       <a href=personalprofile.html>Previous</a>
 
