--- a/IT.html
+++ b/IT.html
@@ -8,8 +8,11 @@
 
   </head>
   <body>
+    <header>
     <h1>IT Interest</h1>
-
+    </header>
+<main>
+  <div class="para">
     <h2>What is your interest in IT? When did your interest in IT Start? </h2>
 
     <p>I am interested in all parts of IT, from the software/developing program side to the hardware side of IT such as computer parts, building and setting up systems/networks. Although I prefer more of the hardware side rather than the software as coding can be a pain sometimes. My interest in IT has always stuck with me since I was young. It started from console games that I used to play when I was younger on the PS3 and eventually I transitioned into PC games and from that point on, I've just been genuinely interested in technology. My computer was also the only thing that I would use mostly, so IT just stuck out to me compared to any other path. </p>
@@ -21,34 +24,8 @@
     <h2>What do you expect to learn during your studies? </h2>
 
     <p>During my time at RMIT, I hope to acquire and improve on some current skills. These include teamwork, problem-solving and developing my understanding of the inner workings of technology and it can impact the world around us. I expect to learn how to program and code at a better level, if possible, learn a variety of programming languages along the way, what is required and expected within the IT industry learning about the many paths of IT that can be pursued. While doing that I also wish to improve on my communication skills such as collaborating in group projects, seeking advice from my fellow IT peers and to converse effectively with clients. </p>
-
-
-      <h2>
-        <a href=background.html>Previous</a>
-
-      </h2>
-
-       <h2>
-         <a href= idealjob.html>Next</a>
-
-
-    <title>IT Interest</title>
-  </head>
-  <body>
-    <h1>IT Interest</h1>
-
-    <h2>What is your interest in IT? When did your interest in IT Start? </h2>
-
-    <p>I am interested in all parts of IT, from the software/developing program side to the hardware side of IT such as computer parts, building and setting up systems/networks. Although I prefer more of the hardware side rather than the software as coding can be a pain sometimes. My interest in IT has always stuck with me since I was young. It started from console games that I used to play when I was younger on the PS3 and eventually I transitioned into PC games and from that point on, I've just been genuinely interested in technology. My computer was also the only thing that I would use mostly, so IT just stuck out to me compared to any other path. </p>
-
-    <h2>Why did you choose to come to RMIT? </h2>
-
-    <p>The reason why I chose to come to RMIT specifically was because of what it had to offer. For convenience and also because it aligned with the career path of IT. I had originally wanted to go to Victoria University in Footscray Park as they also offered something similar and was closer but I chose RMIT after hearing and asking around, to which a lot of people had said they also had attended this same university. Afterwards I changed my first preference to RMIT, with the thought that the Royal Melbourne Institute of Technology would surely offer the best when it comes to technology. </p>
-
-    <h2>What do you expect to learn during your studies? </h2>
-
-    <p>During my time at RMIT, I hope to acquire and improve on some current skills. These include teamwork, problem-solving and developing my understanding of the inner workings of technology and it can impact the world around us. I expect to learn how to program and code at a better level, if possible, learn a variety of programming languages along the way, what is required and expected within the IT industry learning about the many paths of IT that can be pursued. While doing that I also wish to improve on my communication skills such as collaborating in group projects, seeking advice from my fellow IT peers and to converse effectively with clients. </p>
-
+  </div>
+  </main>
 
       <h2>
         <a href=background.html>Previous</a>
@@ -57,7 +34,7 @@
 
        <h2>
          <a href= idealjob.html>Next</a>
-
        </h2>
+
   </body>
 </html>
