--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
 
 <body>
-
+<div class="bg">
 <h1>
 
 <body>
-<div class="bg-image">
+
   <header>
 
     <h1>
@@ -26,7 +26,6 @@
 
   </header>
 
-  <main>
 
     <h2>
       <div class="intromain">
@@ -58,12 +57,10 @@
     </div>
     </h2>
   </div>
-  </main>
 
   <footer>
 
   </footer>
-
 </div>
 
 
