added main menu button to all pages

--- a/IT.html
+++ b/IT.html
@@ -36,5 +36,9 @@
          <a href= idealjob.html>Next</a>
        </h2>
 
+       <h2>
+         <a href= index.html>Main Menu</a>
+       </h2>
+
   </body>
 </html>
