--- a/idealjob.html
+++ b/idealjob.html
@@ -50,7 +50,11 @@
 
      <h2>
        <a href= personalprofile.html>Next</a>
+     </h2>
 
+     <h2>
+       <a href= index.html>Main Menu</a>
+     </h2>
 
   </body>
 </html>
