--- a/personalprofile.html
+++ b/personalprofile.html
@@ -47,6 +47,11 @@
 
          <h2>
            <a href= projectidea.html>Next</a>
+         </h2>
+         
+           <h2>
+             <a href= index.html>Main Menu</a>
+           </h2>
 
 
 
