fixed line under link after being clicked

--- a/IT.html
+++ b/IT.html
@@ -27,18 +27,19 @@
   </div>
   </main>
 
+</body>
+  <div class="nav">
       <h2>
-        <a href=background.html>Previous</a>
-
+        <a href=background.html style = "text-decoration: none">Previous</a>
       </h2>
 
        <h2>
-         <a href= idealjob.html>Next</a>
+         <a href= idealjob.html style = "text-decoration: none">Next</a>
        </h2>
 
        <h2>
-         <a href= index.html>Main Menu</a>
+         <a href= index.html style = "text-decoration: none">Main Menu</a>
        </h2>
+    </div>
 
-  </body>
 </html>
