--- a/background.html
+++ b/background.html
@@ -24,27 +24,28 @@
   <p><strong>Interesting Fact</strong>: I have a little doggo named Ace. He’s 9 years old and is an English Blue Staffy!</p>
 
   <img src="doggo2.jpg" alt="my doggo ace <3">
+</div>
 </main>
-  <h2>
-    <a href=index.html>Previous</a>
-
-  </h2>
-
-   <h2>
-     <a href= IT.html>Next</a>
-
-   </h2>
-
-   <h2>
-     <a href= index.html>Main Menu</a>
-   </h2>
-   
- </div>
-
-
-
-
-
 
   </body>
+
+  <div class="nav">
+    <h2>
+      <div class="navdesign">
+      <a href=index.html>Previous</a>
+      </div>
+    </h2>
+
+     <h2>
+      <div class="navdesign">
+       <a href= IT.html>Next</a>
+      </div>
+     </h2>
+
+     <h2>
+      <div class="navdesign">
+       <a href= index.html>Main Menu</a>
+      </div>
+     </h2>
+   </div>
 </html>
