--- a/index.html
+++ b/index.html
@@ -10,59 +10,51 @@
     <title>Hayden's Profile</title>
   </head>
 
-<body>
-<div class="bg">
-<h1>
+  <body>
 
-<body>
+    <div class="bg">
+    <div class="gallary">
 
-  <header>
-
-    <h1>
+      <header>
       <div class="introtitle">
-       Welcome to Hayden's Profile!
-     </div>
-    </h1>
-
-  </header>
-
+      <h1>Welcome to Hayden's Profile!
+      </div>
+      </h1>
+      </header>
 
     <h2>
       <div class="intromain">
-      <a href="background.html">Background</a>
+      <a href="background.html" style = "text-decoration: none">BACKGROUND</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="IT.html">IT Interest</a>
+      <a href="IT.html" style = "text-decoration: none">IT INTEREST</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="idealjob.html">Ideal Job</a>
+      <a href="idealjob.html" style = "text-decoration: none">IDEAL JOB</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="personalprofile.html">Personal Profile</a>
+      <a href="personalprofile.html" style = "text-decoration: none">PERSONAL PROFILE</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="projectidea.html">Project Idea</a>
-    </div>
-    </h2>
+      <a href="projectidea.html" style = "text-decoration: none">PROJECT IDEA</a>
+      </div>
+      </h2>
+
+  <footer></footer>
+
   </div>
-
-  <footer>
-
-  </footer>
 </div>
-
-
-  </body>
+</body>
 </html>
