--- a/projectidea.html
+++ b/projectidea.html
@@ -46,18 +46,18 @@
     <p>If FoodieFinder is successful, the outcome would be that people who constantly cannot decide what they want to eat will have a platform to look towards instead of aimlessly thinking. It will solve the original problem of finding new restaurants to eat at, while at the same time impact users by prompting them to eat out more as a result of the ability to navigate and find restaurants at ease. If FoodieFinder is successful, a rewards system could be potentially added in which rewards the user’s use of FoodieFinder by offering them discounts for specific restaurants prompting continued use of the application. Future plans with FoodieFinder include a way to book tables and reservations for restaurants that require bookings and possibly a way to view a transaction history for restaurants you have dined in to allow FoodieFinder to shine as the application for all your food needs. </p>
   </div>
 </main>
-    <h2>
-      <a href=personalprofile.html>Previous</a>
 
+    </body>
+  <div class="nav">
+    <h2>
+      <a href=personalprofile.html style = "text-decoration: none">Previous</a>
     </h2>
 
      <h2>
-       <a href= index.html>Main Menu</a>
+       <a href= index.html style = "text-decoration: none">Main Menu</a>
      </h2>
+  </div>
 
 
 
-
-
-  </body>
 </html>
