--- a/idealjob.html
+++ b/idealjob.html
@@ -42,19 +42,19 @@
     <p>In order to obtain the skills required for the position of IT technician, I hope to complete a Bachelor of Information Technology. During this degree I will be able to acquire and improve my programming skills with languages such as python and may change my courses so that I am able to learn other programming languages such as Java and C++. In my second year, I would pick up an elective that goes into further on IT networking and the way it works. By the end of the course, I should have acquired the fundamental skills and basics of IT. To further improve my skills, I will get an internship in an IT place to experience working in the field of IT as a technician and if needed do additional degrees. </p>
 </div>
 </main>
-
+  </body>
+  <div class="nav">
     <h2>
-      <a href=IT.html>Previous</a>
-
+      <a href=IT.html style = "text-decoration: none">Previous</a>
     </h2>
 
      <h2>
-       <a href= personalprofile.html>Next</a>
+       <a href= personalprofile.html style = "text-decoration: none">Next</a>
      </h2>
 
      <h2>
-       <a href= index.html>Main Menu</a>
+       <a href= index.html style = "text-decoration: none">Main Menu</a>
      </h2>
+   </div>
 
-  </body>
 </html>
