--- a/personalprofile.html
+++ b/personalprofile.html
@@ -40,20 +40,20 @@
       </div>
       </main>
 
+        </body>
+    <div class="nav">
         <h2>
-          <a href=idealjob.html>Previous</a>
-
+          <a href=idealjob.html style = "text-decoration: none">Previous</a>
         </h2>
 
-         <h2>
-           <a href= projectidea.html>Next</a>
-         </h2>
-         
-           <h2>
-             <a href= index.html>Main Menu</a>
-           </h2>
+        <h2>
+          <a href= projectidea.html style = "text-decoration: none">Next</a>
+        </h2>
+
+        <h2>
+          <a href= index.html style = "text-decoration: none">Main Menu</a>
+        </h2>
+      </div>
 
 
-
-  </body>
 </html>
