made it so no purple link

--- a/background.html
+++ b/background.html
@@ -32,19 +32,19 @@
   <div class="nav">
     <h2>
       <div class="navdesign">
-      <a href=index.html>Previous</a>
+      <a href=index.html style = "color: black; text-decoration: none">Previous</a>
       </div>
     </h2>
 
      <h2>
       <div class="navdesign">
-       <a href= IT.html>Next</a>
+       <a href= IT.html style = "color: black; text-decoration: none">Next</a>
       </div>
      </h2>
 
      <h2>
       <div class="navdesign">
-       <a href= index.html>Main Menu</a>
+       <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
       </div>
      </h2>
    </div>
