--- a/idealjob.html
+++ b/idealjob.html
@@ -45,15 +45,15 @@
   </body>
   <div class="nav">
     <h2>
-      <a href=IT.html style = "text-decoration: none">Previous</a>
+      <a href=IT.html style = "color: black; text-decoration: none">Previous</a>
     </h2>
 
      <h2>
-       <a href= personalprofile.html style = "text-decoration: none">Next</a>
+       <a href= personalprofile.html style = "color: black; text-decoration: none">Next</a>
      </h2>
 
      <h2>
-       <a href= index.html style = "text-decoration: none">Main Menu</a>
+       <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
      </h2>
    </div>
 
