--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
 
     <h2>
       <div class="intromain">
-      <a href="background.html" style = "text-decoration: none">BACKGROUND</a>
+      <a href="background.html" style = "color: black; text-decoration: none">BACKGROUND</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="IT.html" style = "text-decoration: none">IT INTEREST</a>
+      <a href="IT.html" style = "color: black; text-decoration: none">IT INTEREST</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="idealjob.html" style = "text-decoration: none">IDEAL JOB</a>
+      <a href="idealjob.html" style = "color: black; text-decoration: none">IDEAL JOB</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="personalprofile.html" style = "text-decoration: none">PERSONAL PROFILE</a>
+      <a href="personalprofile.html" style = "color: black; text-decoration: none">PERSONAL PROFILE</a>
       </div>
     </h2>
 
     <h2>
       <div class="intromain">
-      <a href="projectidea.html" style = "text-decoration: none">PROJECT IDEA</a>
+      <a href="projectidea.html" style = "color: black; text-decoration: none">PROJECT IDEA</a>
       </div>
       </h2>
 
