--- a/IT.html
+++ b/IT.html
@@ -30,15 +30,15 @@
 </body>
   <div class="nav">
       <h2>
-        <a href=background.html style = "text-decoration: none">Previous</a>
+        <a href=background.html style = "color: black; text-decoration: none">Previous</a>
       </h2>
 
        <h2>
-         <a href= idealjob.html style = "text-decoration: none">Next</a>
+         <a href= idealjob.html style = "color: black; text-decoration: none">Next</a>
        </h2>
 
        <h2>
-         <a href= index.html style = "text-decoration: none">Main Menu</a>
+         <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
        </h2>
     </div>
 
