--- a/personalprofile.html
+++ b/personalprofile.html
@@ -43,15 +43,15 @@
         </body>
     <div class="nav">
         <h2>
-          <a href=idealjob.html style = "text-decoration: none">Previous</a>
+          <a href=idealjob.html style = "color: black; text-decoration: none">Previous</a>
         </h2>
 
         <h2>
-          <a href= projectidea.html style = "text-decoration: none">Next</a>
+          <a href= projectidea.html style = "color: black; text-decoration: none">Next</a>
         </h2>
 
         <h2>
-          <a href= index.html style = "text-decoration: none">Main Menu</a>
+          <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
         </h2>
       </div>
 
