added nav menu design

--- a/idealjob.html
+++ b/idealjob.html
@@ -45,14 +45,17 @@
   </body>
   <div class="nav">
     <h2>
+      <div class="navdesign">
       <a href=IT.html style = "color: black; text-decoration: none">Previous</a>
     </h2>
 
      <h2>
+       <div class="navdesign">
        <a href= personalprofile.html style = "color: black; text-decoration: none">Next</a>
      </h2>
 
      <h2>
+       <div class="navdesign">
        <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
      </h2>
    </div>
