--- a/projectidea.html
+++ b/projectidea.html
@@ -50,10 +50,12 @@
     </body>
   <div class="nav">
     <h2>
+      <div class="navdesign">
       <a href=personalprofile.html style = "color: black; text-decoration: none">Previous</a>
     </h2>
 
      <h2>
+       <div class="navdesign">
        <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
      </h2>
   </div>
