--- a/IT.html
+++ b/IT.html
@@ -30,14 +30,17 @@
 </body>
   <div class="nav">
       <h2>
+        <div class="navdesign">
         <a href=background.html style = "color: black; text-decoration: none">Previous</a>
       </h2>
 
        <h2>
+         <div class="navdesign">
          <a href= idealjob.html style = "color: black; text-decoration: none">Next</a>
        </h2>
 
        <h2>
+         <div class="navdesign">
          <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
        </h2>
     </div>
