added image for ideal job and changed writing to caps

--- a/background.html
+++ b/background.html
@@ -11,7 +11,7 @@
     <body>
 <header>
 
-  <h1>Background</h1>
+  <h1>BACKGROUND</h1>
 
 </header>
 
@@ -32,19 +32,19 @@
   <div class="nav">
     <h2>
       <div class="navdesign">
-      <a href=index.html style = "color: black; text-decoration: none">Previous</a>
+      <a href=index.html style = "color: black; text-decoration: none">PREVIOUS</a>
       </div>
     </h2>
 
      <h2>
       <div class="navdesign">
-       <a href= IT.html style = "color: black; text-decoration: none">Next</a>
+       <a href= IT.html style = "color: black; text-decoration: none">NEXT</a>
       </div>
      </h2>
 
      <h2>
       <div class="navdesign">
-       <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
+       <a href= index.html style = "color: black; text-decoration: none">MENU</a>
       </div>
      </h2>
    </div>
