--- a/idealjob.html
+++ b/idealjob.html
@@ -7,17 +7,21 @@
   </head>
   <body>
     <header>
-    <h1>Ideal Job</h1>
+    <h1>IDEAL JOB</h1>
   </header>
 
   <main>
   <div class= "para">
 
-    <h2>Position</h2>
+    <h2><em>Position</em></h2>
+
+    <img src="jobrole.png" alt="IT Technician"
+    width="600"
+    height="300">
 
     <p>As an IT Technician for Sterequip, a company that presents health service organisations with reprocessed medical devices. They will be providing support by maintaining information systems, diagnosing and repairing technology equipment and work alongside other IT personnel such as managers to ensure that the information systems are within Sterequip’s standards and expectations. This position appeals to me as it allows me to work with technology equipment and end-user systems within the company. Out of all the other positions out there, this one allows me to be physical with IT instead of mindlessly coding for hours making this job something that I may see myself pursuing in the future. </p>
 
-    <h2>Skills, experience, qualifications required:</h2>
+    <h2><em>Skills, experience, qualifications <strong>required</strong>:</em></h2>
 
     <p>For this job, you will need to have completed either a Diploma of Information Technology or a Bachelor of Information Technology.
       The skills required are:
@@ -29,7 +33,7 @@
       Experience with complex/multi-site networks
 
       Prior and proven experience in an IT support technician role or something similar.</p>
-    <h2> Skills, experience, qualifications i have: </h2>
+    <h2><em>Skills, experience, qualifications i have:</em></h2>
 
     <p> Ability to be organised, somewhat work in a timely manner
       Little experience repairing computer/network systems
@@ -37,7 +41,7 @@
       Able to work towards deadline but unable to full cope with pressure
       Basic knowledge of python </p>
 
-    <h2>A plan describing how you will obtain the skills, qualifications and experience required for the position:</h2>
+    <h2><em>A plan describing how you will obtain the skills, qualifications and experience required for the position:</em></h2>
 
     <p>In order to obtain the skills required for the position of IT technician, I hope to complete a Bachelor of Information Technology. During this degree I will be able to acquire and improve my programming skills with languages such as python and may change my courses so that I am able to learn other programming languages such as Java and C++. In my second year, I would pick up an elective that goes into further on IT networking and the way it works. By the end of the course, I should have acquired the fundamental skills and basics of IT. To further improve my skills, I will get an internship in an IT place to experience working in the field of IT as a technician and if needed do additional degrees. </p>
 </div>
@@ -46,17 +50,17 @@
   <div class="nav">
     <h2>
       <div class="navdesign">
-      <a href=IT.html style = "color: black; text-decoration: none">Previous</a>
+      <a href=IT.html style = "color: black; text-decoration: none">PREVIOUS</a>
     </h2>
 
      <h2>
        <div class="navdesign">
-       <a href= personalprofile.html style = "color: black; text-decoration: none">Next</a>
+       <a href= personalprofile.html style = "color: black; text-decoration: none">NEXT</a>
      </h2>
 
      <h2>
        <div class="navdesign">
-       <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
+       <a href= index.html style = "color: black; text-decoration: none">MENU</a>
      </h2>
    </div>
 
