--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
       <header>
       <div class="introtitle">
-      <h1>Welcome to Hayden's Profile!
-      </div>
+      <h1>WELCOME TO HAYDEN'S PROFILE
+
       </h1>
+      </div>
       </header>
 
     <h2>
