--- a/personalprofile.html
+++ b/personalprofile.html
@@ -10,7 +10,7 @@
   <body>
 
   <header>
-    <h1>Personal Profile</h1>
+    <h1>PERSONAL PROFILE</h1>
   </header>
   <main>
     <div class="para">
@@ -26,17 +26,17 @@
 
       <h2>Big Five Personality Test</h2>
 
-      <h2>What do the results of these tests mean for you?</h2>
+      <h2><em>What do the results of these tests mean for you?</em></h2>
 
       <p>These tests overall show that the type of person I am is introverted and more of a person to stand at the back and observe, opposite to someone who may be extraverted and cannot stand sitting back and observing. It also shows that because of my introverted nature, I may be judgemental about certain things and form opinions very easily. Referring to the Myerrs-Briggs test, the highest scoring attribute for me was that I am very observant and watch carefully. This attribute to me can be quite useful for picking up details that other people wouldn’t have picked up but not so useful if I do not contribute. </p>
 
-      <h2>How do you think these results may influence your behaviour in a team? </h2>
+      <h2><em>How do you think these results may influence your behaviour in a team?</em></h2>
 
       <p>As mentioned prior, my ability to be observant and be judgmental can impact how I behave in a team. It may mean that I may contribute great ideas towards the team but it can also mean that I am very introverted in the sense that I wouldn’t be open about situations as some other people would. I am also very careful, which can influence how I interact with my other peers in terms of creating connections and affecting their feelings as I would rather keep to myself instead of causing problems.</p>
 
-      <h2>How do you think you should take this into account when forming a team?</h2>
+      <h2><em>How do you think you should take this into account when forming a team?</em></h2>
 
-      <p>With these qualities and attributes in mind, when forming a team I would want to form a team that includes individuals with opposing qualities rather than the same. If i’m introverted, forming a team with other individuals who are much more extraverted allows me to experience a different environment and share ideas between two different types of people rather than having a whole group of individuals who share very similar qualities leading to poor connections, no communication and possibly lack of work within a team
+      <p>With these qualities and attributes in mind, when forming a team I would want to form a team that includes individuals with opposing qualities rather than the same. If i’m introverted, forming a team with other individuals who are much more extraverted allows me to experience a different environment and share ideas between two different types of people rather than having a whole group of individuals who share very similar qualities leading to poor connections, no communication and possibly lack of work within a team</p>
       </div>
       </main>
 
@@ -44,17 +44,17 @@
     <div class="nav">
         <h2>
           <div class="navdesign">
-          <a href=idealjob.html style = "color: black; text-decoration: none">Previous</a>
+          <a href=idealjob.html style = "color: black; text-decoration: none">PREVIOUS</a>
         </h2>
 
         <h2>
           <div class="navdesign">
-          <a href= projectidea.html style = "color: black; text-decoration: none">Next</a>
+          <a href= projectidea.html style = "color: black; text-decoration: none">NEXT</a>
         </h2>
 
         <h2>
           <div class="navdesign">
-          <a href= index.html style = "color: black; text-decoration: none">Main Menu</a>
+          <a href= index.html style = "color: black; text-decoration: none">MENU</a>
         </h2>
       </div>
 
