--- a/idealjob.html
+++ b/idealjob.html
@@ -10,19 +10,22 @@
     <h1>IDEAL JOB</h1>
   </header>
 
+  <img src="jobrole.png" alt="IT Technician" width="600" height="300">
+
+  <img src="itjob.png" alt="IT Technician"width="500" height="300">
+
+
   <main>
   <div class= "para">
 
     <h2><em>Position</em></h2>
 
-    <img src="jobrole.png" alt="IT Technician"
-    width="600"
-    height="300">
 
+    <div class= "parabord">
     <p>As an IT Technician for Sterequip, a company that presents health service organisations with reprocessed medical devices. They will be providing support by maintaining information systems, diagnosing and repairing technology equipment and work alongside other IT personnel such as managers to ensure that the information systems are within Sterequip’s standards and expectations. This position appeals to me as it allows me to work with technology equipment and end-user systems within the company. Out of all the other positions out there, this one allows me to be physical with IT instead of mindlessly coding for hours making this job something that I may see myself pursuing in the future. </p>
-
+    </div>
     <h2><em>Skills, experience, qualifications <strong>required</strong>:</em></h2>
-
+      <div class= "parabord">
     <p>For this job, you will need to have completed either a Diploma of Information Technology or a Bachelor of Information Technology.
       The skills required are:
       Ability to be organised, work in a timely manner and multi-task
@@ -31,19 +34,23 @@
       Experience with support an office environment that is Windows based
       Ability to cope with pressure and to work towards deadlines
       Experience with complex/multi-site networks
-
       Prior and proven experience in an IT support technician role or something similar.</p>
+    </div>
     <h2><em>Skills, experience, qualifications i have:</em></h2>
-
+      <div class= "parabord">
     <p> Ability to be organised, somewhat work in a timely manner
       Little experience repairing computer/network systems
       Experienced with a Windows based operating system
       Able to work towards deadline but unable to full cope with pressure
       Basic knowledge of python </p>
+    </div>
 
     <h2><em>A plan describing how you will obtain the skills, qualifications and experience required for the position:</em></h2>
+      <div class= "parabord">
 
-    <p>In order to obtain the skills required for the position of IT technician, I hope to complete a Bachelor of Information Technology. During this degree I will be able to acquire and improve my programming skills with languages such as python and may change my courses so that I am able to learn other programming languages such as Java and C++. In my second year, I would pick up an elective that goes into further on IT networking and the way it works. By the end of the course, I should have acquired the fundamental skills and basics of IT. To further improve my skills, I will get an internship in an IT place to experience working in the field of IT as a technician and if needed do additional degrees. </p>
+    <p>In order to obtain the skills required for the position of IT technician, I hope to complete a Bachelor of Information Technology. During this degree I will be able to acquire and improve my programming skills with languages such as python and may change my courses so that I am able to learn other programming languages such as Java and C++. In my second year, I would pick up an elective that goes into further on IT networking and the way it works. By the end of the course, I should have
+      acquired the fundamental skills and basics of IT. To further improve my skills, I will get an internship in an IT place to experience working in the field of IT as a technician and if needed do additional degrees. </p>
+</div>
 </div>
 </main>
   </body>
