--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
       <header>
       <div class="introtitle">
-      <h1>WELCOME TO HAYDEN'S PROFILE
-
-      </h1>
+      <h1>WELCOME TO HAYDEN'S PROFILE</h1>
       </div>
       </header>
 
