--- a/personalprofile.html
+++ b/personalprofile.html
@@ -12,19 +12,20 @@
   <header>
     <h1>PERSONAL PROFILE</h1>
   </header>
+
+
   <main>
     <div class="para">
-    <h2>Myerrs-Briggs Test</h2>
 
-    <p>Personality type: Defender (ISFJ-T)
-      Traits: Introverted – 65%, Observant – 77%,
-      Feeling – 63%, Judging – 54%, Turbulent – 58%
-      Role: Sentinel
-      Strategy: Constant Improvement</p>
+
+    <h2>Myerrs-Briggs Test</h2>
+      <img src="myerrs.png" alt="Myerrs-Briggs Test">
 
       <h2>Learning Styles Test</h2>
+      <img src="learningstyle.png" alt="Learning Styles Test">
 
       <h2>Big Five Personality Test</h2>
+        <img src="bigfive.png" alt="Big Five Personality Test">
 
       <h2><em>What do the results of these tests mean for you?</em></h2>
 
