--- a/idealjob.html
+++ b/idealjob.html
@@ -9,11 +9,11 @@
     <header>
     <h1>IDEAL JOB</h1>
   </header>
-
+  <div class="imgit">
   <img src="jobrole.png" alt="IT Technician" width="600" height="300">
 
-  <img src="itjob.png" alt="IT Technician"width="500" height="300">
-
+  <img src="itjob.png" alt="IT Technician"width="600" height="300">
+</div>
 
   <main>
   <div class= "para">
@@ -57,17 +57,17 @@
   <div class="nav">
     <h2>
       <div class="navdesign">
-      <a href=IT.html style = "color: black; text-decoration: none">PREVIOUS</a>
+      <a href=IT.html style = "color: #0B4183; text-decoration: none">PREVIOUS</a>
     </h2>
 
      <h2>
        <div class="navdesign">
-       <a href= personalprofile.html style = "color: black; text-decoration: none">NEXT</a>
+       <a href= personalprofile.html style = "color: #0B4183; text-decoration: none">NEXT</a>
      </h2>
 
      <h2>
        <div class="navdesign">
-       <a href= index.html style = "color: black; text-decoration: none">MENU</a>
+       <a href= index.html style = "color: #0B4183; text-decoration: none">MENU</a>
      </h2>
    </div>
 
