--- a/IT.html
+++ b/IT.html
@@ -33,17 +33,17 @@
   <div class="nav">
       <h2>
         <div class="navdesign">
-        <a href=background.html style = "color: black; text-decoration: none">PREVIOUS</a>
+        <a href=background.html style = "color: #0B4183; text-decoration: none">PREVIOUS</a>
       </h2>
 
        <h2>
          <div class="navdesign">
-         <a href= idealjob.html style = "color: black; text-decoration: none">NEXT</a>
+         <a href= idealjob.html style = "color: #0B4183; text-decoration: none">NEXT</a>
        </h2>
 
        <h2>
          <div class="navdesign">
-         <a href= index.html style = "color: black; text-decoration: none">MENU</a>
+         <a href= index.html style = "color: #0B4183; text-decoration: none">MENU</a>
        </h2>
     </div>
 
