--- a/background.html
+++ b/background.html
@@ -28,8 +28,10 @@
   <p>I am currently 19, born on the 22nd of February. Both my parents were born in East Timor (it’s a small country located near Indonesia), meaning that they are both Timorese making me also Timorese! At home, we speak Hakka which is a chinese dialect commonly spoken by residents of East Timor. In my family of 6 (including me), I have 3 other older brothers and a mother and father. I am the youngest in my family with an age gap of 13 years between me and the third oldest brother.</p>
   </div>
   <div class= "parabord">
+
   <p>As of now, my occupation is a cashier and customer service team member at Woolworths and have been working there for 2 years (great first job!). Now moving onto my hobbies… mainly just PC gaming and watching anime. I tend to switch back and forth between games but I mostly play League of Legends and VALORANT. When it comes to anime I don’t always watch it but I'll have random periods where I'll just binge one entire series then go back into a hiatus until I suddenly get the urge to watch.
   </div>
+  <hr>
   <p><strong>Interesting Fact</strong>: I have a little doggo named Ace. He’s 9 years old and is an English Blue Staffy!</p>
 
   <img src="doggo2.jpg" alt="my doggo ace <3">
@@ -41,19 +43,19 @@
   <div class="nav">
     <h2>
       <div class="navdesign">
-      <a href=index.html style = "color: black; text-decoration: none">PREVIOUS</a>
+      <a href=index.html style = "color: #0B4183; text-decoration: none">PREVIOUS</a>
       </div>
     </h2>
 
      <h2>
       <div class="navdesign">
-       <a href= IT.html style = "color: black; text-decoration: none">NEXT</a>
+       <a href= IT.html style = "color: #0B4183; text-decoration: none">NEXT</a>
       </div>
      </h2>
 
      <h2>
       <div class="navdesign">
-       <a href= index.html style = "color: black; text-decoration: none">MENU</a>
+       <a href= index.html style = "color:#0B4183; text-decoration: none">MENU</a>
       </div>
      </h2>
    </div>
