idk how to spell myers briggs apparently

--- a/personalprofile.html
+++ b/personalprofile.html
@@ -14,7 +14,7 @@
   </header>
 
   <div class=myerrs>
-  <h2>Myerrs-Briggs Test</h2>
+  <h2>Myers-Briggs Test</h2>
     <img src="myerrs.png" alt="Myerrs-Briggs Test">
   </div>
 
